--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>写给你的一封信</title>
+    <title>写给桐桐的一封信</title>
     <link rel="stylesheet" href="letter.css">
 </head>
 <body>
